# mcp-onboarder

./: .gitignore  README.md  pyproject.toml
src/mcp_onboarder/: cli.py  templates.py
