[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-onboarder"
version = "0.1.0"
description = "CLI для быстрого подключения MCP серверов в mcporter"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "stepan + openclaw" }]
dependencies = []

[project.scripts]
mcp-onboarder = "mcp_onboarder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
